[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "jimmy"
dynamic = ["version"]
description = "Convert your notes to Markdown"
authors = [
    {name = "Marph", email = "martin.d@andix.de"},
]
readme = "readme.md"
license = "GPL-3.0-only"
license-files = ["license"]
keywords = ["markdown", "notes", "joplin", "obsidian"]
classifiers = [
    "Environment :: Console",
    "Framework :: MkDocs",
    "Framework :: Pytest",
    "Intended Audience :: End Users/Desktop",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.14",
    "Topic :: Communications :: Email",
    "Topic :: Documentation",
    "Topic :: File Formats",
    "Topic :: Text Processing :: Markup",
    "Topic :: Text Processing :: Markup :: Markdown",
    "Topic :: Text Processing :: Markup :: HTML",
    "Topic :: Text Processing :: Markup :: reStructuredText",
]
requires-python = ">=3.14"
dependencies = [
    "anyblock-exporter",
    "beautifulsoup4==4.15.0",
    "cryptography==48.0.1",
    "markdown==3.10.2",
    "pdf-oxide==0.3.69",
    "platformdirs==4.10.0",
    "puremagic==2.2.0",
    "pycrdt==0.14.1",
    "pypandoc==1.17",
    "pyparsing==3.3.2",
    "python-frontmatter==1.3.0",
    "pyyaml==6.0.3",
    "rich==15.0.0",
    "signal-export==3.8.3",
    "textual==8.2.7",
    "textual-fspicker==1.0.1",
]
[project.scripts]
jimmy = "jimmy.jimmy_cli:main"
[project.urls]
Homepage = "https://github.com/marph91/jimmy"
Documentation = "https://marph91.github.io/jimmy"
Download = "https://github.com/marph91/jimmy/releases"
Repository = "https://github.com/marph91/jimmy"
Issues = "https://github.com/marph91/jimmy/issues"

[tool.hatch.envs.default]
installer = "uv"
[tool.hatch.version]
path = "src/jimmy/variables.py"

[tool.uv.sources]
anyblock-exporter = { git = "https://github.com/jfcostello/AnyBlock-To-Markdown.git", rev = "af1d744" }

[dependency-groups]
build = [
    "hatch==1.17.0",
    "pyinstaller==6.21.0",
    "twine==6.2.0",
]
dev = [
    "mypy==2.1.0",
    "parameterized==0.9.0",
    "py7zr==1.1.3",
    "pylint==4.0.6",
    "pytest==9.1.1",
    "pytest-sugar==1.1.1",
    "pytest-xdist==3.8.0",
    "requests==2.34.2",
    "ruff==0.15.20",
    "types-beautifulsoup4==4.12.0.20250516",
    "types-markdown==3.10.2.20260518",
    "types-pyyaml==6.0.12.20260518",
]
docs = [
    "mkdocs-git-revision-date-localized-plugin==1.5.3",
    "mkdocs-material==9.5.18",
    "mkdocs-open-in-new-tab==1.0.8",
    # TODO: remove temporary workaround
    "click>=8.4.0",  # fix mkdocs livereload
]

[tool.mypy]
# almost like strict, but leave out some too strict checks
warn_unused_configs = true
# disallow_any_generics = true
disallow_subclassing_any = true
# disallow_untyped_calls = true
# disallow_untyped_defs = true
# disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
warn_redundant_casts = true
warn_unused_ignores = true
# warn_return_any = true
no_implicit_reexport = true
strict_equality = true
extra_checks = true
# for python-markdown
disable_error_code = "attr-defined"
[[tool.mypy.overrides]]
module = [
    "anyblock_exporter",
    "frontmatter",
    "puremagic",
    "pypandoc",
    # "pytodotxt",
    # "stage_left",
    # "stage_left.types"
]
ignore_missing_imports = true
[[tool.mypy.overrides]]
module = ["sigexport.*"]
follow_untyped_imports = true

[tool.pylint]
disable = [
    # f-strings are convenient. Don't care about the performance (yet).
    "logging-fstring-interpolation",
    "missing-function-docstring",
    "missing-class-docstring",
    # needed for flexible base class
    "arguments-differ",
    # too many
    "too-many-branches",
    "too-many-instance-attributes",
    "too-many-locals",
    "too-many-statements",
]
min-similarity-lines = 10
notes = []  # don't show todos

[tool.ruff]
# Set the maximum line length to 88.
line-length = 100
# Include pyinstaller spec files.
extend-include = ["*.spec"]
[tool.ruff.lint]
# all rules: https://docs.astral.sh/ruff/rules/
select = [
    "B",    # flake8-bugbear
    "E",    # pycodestyle errors
    "F",    # Pyflakes
    "I",  # isort
    "N",    # pep8-naming
    # "PL",   # Pylint
    # "RUF",  # ruff
    # "S",  # flake8-bandit
    "SIM",  # flake8-simplify
    "UP",   # pyupgrade
    "W",    # pycodestyle warnings
]
[tool.ruff.lint.isort]
force-sort-within-sections = true  # sort all imports alphabetically
combine-as-imports = true  # sort all imports alphabetically

# use pytest to include unittests and doctests:
# https://stackoverflow.com/questions/43463273/python-m-doctest-ignores-files-with-same-names-in-different-directories
[tool.pytest.ini_options]
addopts = "--log-level DEBUG --verbose --doctest-modules --doctest-continue-on-failure --durations=5 --durations-min=10"
testpaths = ["jimmy", "test/*.py"]
